--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
 
 <!-- Header -->
 <header id="header">
-	<a href="http://localhost:4000/" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -67,7 +67,7 @@
 			
 		
 			
-				<li><a href="http://localhost:4000/landing/">Landing</a></li>
+				<li><a href="/landing/">Landing</a></li>
 			
 		
 			
@@ -79,19 +79,19 @@
 			
 		
 			
-				<li><a href="http://localhost:4000/what-we-do/">What we do</a></li>
+				<li><a href="/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="http://localhost:4000/services/">Our Services</a></li>
+				<li><a href="/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="http://localhost:4000/about/">About Us</a></li>
+				<li><a href="/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -210,13 +210,13 @@
 </div>
 
 <!-- Scripts -->
-	<script async src="http://localhost:4000/assets/js/jquery.min.js"></script>
-	<script async src="http://localhost:4000/assets/js/jquery.scrolly.min.js"></script>
-	<script async src="http://localhost:4000/assets/js/jquery.scrollex.min.js"></script>
-	<script async src="http://localhost:4000/assets/js/skel.min.js"></script>
-	<script async src="http://localhost:4000/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="http://localhost:4000/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script async src="http://localhost:4000/assets/js/main.js"></script>
+	<script async src="/assets/js/jquery.min.js"></script>
+	<script async src="/assets/js/jquery.scrolly.min.js"></script>
+	<script async src="/assets/js/jquery.scrollex.min.js"></script>
+	<script async src="/assets/js/skel.min.js"></script>
+	<script async src="/assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
+	<script async src="/assets/js/main.js"></script>
 
 
 </body>
