build js assets

--- a/services/index.html
+++ b/services/index.html
@@ -279,13 +279,13 @@
 </div>
 
 <!-- Scripts -->
-	<script async src="/assets/js/jquery.min.js"></script>
-	<script async src="/assets/js/jquery.scrolly.min.js"></script>
-	<script async src="/assets/js/jquery.scrollex.min.js"></script>
-	<script async src="/assets/js/skel.min.js"></script>
-	<script async src="/assets/js/util.js"></script>
+	<script async src="/atom-digital-site/assets/js/jquery.min.js"></script>
+	<script async src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
+	<script async src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
+	<script async src="/atom-digital-site/assets/js/skel.min.js"></script>
+	<script async src="/atom-digital-site/assets/js/util.js"></script>
 	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script async src="/assets/js/main.js"></script>
+	<script async src="/atom-digital-site/assets/js/main.js"></script>
 
 
 </body>
