--- a/generic/index.html
+++ b/generic/index.html
@@ -11,10 +11,10 @@
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie8.css" /><![endif]-->
 	<link rel="icon" type="image/x-icon" href="/atom-digital-site/assets/images/favicon.ico">
 
 </head>
@@ -27,7 +27,7 @@
 
 <!-- Header -->
 <header id="header">
-	<a href="" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/atom-digital-site" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -67,7 +67,7 @@
 			
 		
 			
-				<li><a href="/landing/">Landing</a></li>
+				<li><a href="/atom-digital-site/landing/">Landing</a></li>
 			
 		
 			
@@ -79,19 +79,19 @@
 			
 		
 			
-				<li><a href="/what-we-do/">What we do</a></li>
+				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/services/">Our Services</a></li>
+				<li><a href="/atom-digital-site/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/about/">About Us</a></li>
+				<li><a href="/atom-digital-site/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -112,7 +112,7 @@
 		<header class="major">
 			<h1>Generic</h1>
 		</header>
-		<span class="image main"><img src="/assets/images/pic11.jpg" alt="" /></span>
+		<span class="image main"><img src="/atom-digital-site/assets/images/pic11.jpg" alt="" /></span>
 		<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
@@ -219,7 +219,7 @@
 	<script async src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
 	<script async src="/atom-digital-site/assets/js/skel.min.js"></script>
 	<script async src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
+	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
 	<script async src="/atom-digital-site/assets/js/main.js"></script>
 
 
