--- a/landing/index.html
+++ b/landing/index.html
@@ -11,10 +11,10 @@
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
+	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie8.css" /><![endif]-->
 	<link rel="icon" type="image/x-icon" href="/atom-digital-site/assets/images/favicon.ico">
 
 </head>
@@ -27,7 +27,7 @@
 
 <!-- Header -->
 <header id="header" class="alt style2">
-	<a href="" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="/atom-digital-site" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -67,7 +67,7 @@
 			
 		
 			
-				<li><a href="/landing/">Landing</a></li>
+				<li><a href="/atom-digital-site/landing/">Landing</a></li>
 			
 		
 			
@@ -79,19 +79,19 @@
 			
 		
 			
-				<li><a href="/what-we-do/">What we do</a></li>
+				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/services/">Our Services</a></li>
+				<li><a href="/atom-digital-site/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/about/">About Us</a></li>
+				<li><a href="/atom-digital-site/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -105,7 +105,7 @@
         <section id="banner" class="style2">
             <div class="inner">
                 <span class="image">
-                    <img src="/assets/images/pic07.jpg" alt="">
+                    <img src="/atom-digital-site/assets/images/pic07.jpg" alt="">
                 </span>
                 <header class="major">
 
@@ -137,7 +137,7 @@
 <section id="two" class="spotlights">
 	<section>
 		<a href="generic.html" class="image">
-			<img src="/assets/images/pic08.jpg" alt="" data-position="center center" />
+			<img src="/atom-digital-site/assets/images/pic08.jpg" alt="" data-position="center center" />
 		</a>
 		<div class="content">
 			<div class="inner">
@@ -153,7 +153,7 @@
 	</section>
 	<section>
 		<a href="generic.html" class="image">
-			<img src="/assets/images/pic09.jpg" alt="" data-position="top center" />
+			<img src="/atom-digital-site/assets/images/pic09.jpg" alt="" data-position="top center" />
 		</a>
 		<div class="content">
 			<div class="inner">
@@ -169,7 +169,7 @@
 	</section>
 	<section>
 		<a href="generic.html" class="image">
-			<img src="/assets/images/pic10.jpg" alt="" data-position="25% 25%" />
+			<img src="/atom-digital-site/assets/images/pic10.jpg" alt="" data-position="25% 25%" />
 		</a>
 		<div class="content">
 			<div class="inner">
@@ -296,7 +296,7 @@
 	<script async src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
 	<script async src="/atom-digital-site/assets/js/skel.min.js"></script>
 	<script async src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
+	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
 	<script async src="/atom-digital-site/assets/js/main.js"></script>
 
 
