--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 </div>
 
 <!-- Scripts -->
-	<script async src="/atom-digital-site/assets/js/jquery.min.js"></script>
-	<script async src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
-	<script async src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
-	<script async src="/atom-digital-site/assets/js/skel.min.js"></script>
-	<script async src="/atom-digital-site/assets/js/util.js"></script>
+	<script src="/atom-digital-site/assets/js/jquery.min.js"></script>
+	<script src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
+	<script src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
+	<script src="/atom-digital-site/assets/js/skel.min.js"></script>
+	<script src="/atom-digital-site/assets/js/util.js"></script>
 	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script async src="/atom-digital-site/assets/js/main.js"></script>
+	<script src="/atom-digital-site/assets/js/main.js"></script>
 
 
 </body>
