--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -77,8 +77,6 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/landing/">Landing</a></li>
-			
 		
 			
 		
@@ -120,7 +118,8 @@
 				<header class="major">
 					<h1>Examples</h1>
 				</header>
-				
+				<h2 id="todo">TODO</h2>
+<p>Adding a list of examples</p>
  
 			</div>
 		</section>
