updating footer colour

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 	<title>404 | Atom Digital</title>
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
