--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -19,7 +19,7 @@
 	<title>Examples | Atom Digital</title>
 	<meta name="description" content="About Atom Digital - Business Software Consultants">
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/atom-digital-site/assets/css/main.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="/atom-digital-site/assets/css/ie9.css" /><![endif]-->
