updating tile h3 to h2

--- a/elements/index.html
+++ b/elements/index.html
@@ -598,7 +598,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
-				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
+				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
