--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <img src="" alt="What we do" />
     </span>
     <header class="major">
-      <h3><a href="/atom-digital-site/what-we-do/" class="link">What we do</a></h3>
+      <h2><a href="/atom-digital-site/what-we-do/" class="link">What we do</a></h2>
       <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
     </header>
   </article>
@@ -137,7 +137,7 @@
       <img src="" alt="Our Services" />
     </span>
     <header class="major">
-      <h3><a href="/atom-digital-site/services/" class="link">Our Services</a></h3>
+      <h2><a href="/atom-digital-site/services/" class="link">Our Services</a></h2>
       <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
     </header>
   </article>
@@ -147,7 +147,7 @@
       <img src="" alt="Examples" />
     </span>
     <header class="major">
-      <h3><a href="/atom-digital-site/examples-of-digital-transformation/" class="link">Examples</a></h3>
+      <h2><a href="/atom-digital-site/examples-of-digital-transformation/" class="link">Examples</a></h2>
       <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
     </header>
   </article>
@@ -157,7 +157,7 @@
       <img src="" alt="About Us" />
     </span>
     <header class="major">
-      <h3><a href="/atom-digital-site/about/" class="link">About Us</a></h3>
+      <h2><a href="/atom-digital-site/about/" class="link">About Us</a></h2>
       <p>About Atom Digital<br>Business Software Consultancy</p>
     </header>
   </article>
@@ -263,7 +263,7 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Atom Digital</li>
-				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
+				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
 			</ul>
 		</div>
 	</footer>
