--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
 
 <!-- Header -->
 <header id="header">
-	<a href="/atom-digital-site" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="http://localhost:4000/atom-digital-site" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -61,7 +61,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/">Home</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/">Increase Sales, Reduce Costs and Improve Productivity</a></li>
 			
 		
 			
@@ -87,19 +87,19 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/about/">About Us</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -236,13 +236,13 @@
 </div>
 
 <!-- Scripts -->
-	<script src="/atom-digital-site/assets/js/jquery.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/atom-digital-site/assets/js/skel.min.js"></script>
-	<script src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/atom-digital-site/assets/js/main.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/jquery.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/skel.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="http://localhost:4000/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="http://localhost:4000/atom-digital-site/assets/js/main.js"></script>
 
 
 </body>
