--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html lang="en-AU">
 
 <head>
-	<title>Home | Atom Digital</title>
+	<title>Increase Sales, Reduce Costs and Improve Productivity | Atom Digital</title>
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,7 +27,7 @@
 
 <!-- Header -->
 <header id="header" class="alt">
-	<a href="/atom-digital-site" class="logo"><strong>Atom</strong> <span>Digital</span></a>
+	<a href="http://localhost:4000/atom-digital-site" class="logo"><strong>Atom</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -51,7 +51,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/">Home</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/">Increase Sales, Reduce Costs and Improve Productivity</a></li>
 			
 		
 			
@@ -77,19 +77,19 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/what-we-do/">What we do</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/what-we-do/">What we do</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/services/">Our Services</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/examples-of-digital-transformation/">Examples</a></li>
 			
 		
 			
-				<li><a href="/atom-digital-site/about/">About Us</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/about/">About Us</a></li>
 			
 		
 	</ul>
@@ -169,9 +169,9 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>Massa libero</h2>
+                    <h3>Massa libero</h3>
                 </header>
-                <p><p>Nullam et  eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+                <p>
 </p>
                 <ul class="actions">
                     <li><a href="landing.html" class="button next">Get Started</a></li>
@@ -271,13 +271,13 @@
 </div>
 
 <!-- Scripts -->
-	<script src="/atom-digital-site/assets/js/jquery.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
-	<script src="/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
-	<script src="/atom-digital-site/assets/js/skel.min.js"></script>
-	<script src="/atom-digital-site/assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="/atom-digital-site/assets/js/main.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/jquery.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/jquery.scrolly.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/jquery.scrollex.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/skel.min.js"></script>
+	<script src="http://localhost:4000/atom-digital-site/assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="http://localhost:4000/atom-digital-site/assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="http://localhost:4000/atom-digital-site/assets/js/main.js"></script>
 
 
 </body>
