--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html lang="en-AU">
 
 <head>
-	<title>Increase Sales, Reduce Costs and Improve Productivity | Atom Digital</title>
+	<title>Home | Atom Digital</title>
 	<meta name="description" content="Atom">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -51,7 +51,7 @@
 			
 		
 			
-				<li><a href="http://localhost:4000/atom-digital-site/">Increase Sales, Reduce Costs and Improve Productivity</a></li>
+				<li><a href="http://localhost:4000/atom-digital-site/">Home</a></li>
 			
 		
 			
@@ -171,10 +171,12 @@
                 <header class="major">
                     <h3>Massa libero</h3>
                 </header>
-                <p>
+                <p><p>Are you a growing business with 5 to 50 employees? Is your turnover doubling in the next 3 years?</p>
+
+<p>ATOM Digital can help you get ahead of the game by taking ownership of your digital landscape. We use software tools and services to help increase sales, reduce costs and improve productivity while you focus on growth.</p>
 </p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                    <li><a href="#contact" class="button special">Contact Us</a></li>
                 </ul>
             </div>
         </section>
