--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/">Home</a></li>
+				<li><a href="/atom-digital-site/" class="link">Home</a></li>
 			
 		
 			
@@ -123,43 +123,51 @@
 <section id="one" class="tiles">
   
   <article>
-    <span class="image">
-      <img src="" alt="What we do" />
-    </span>
-    <header class="major">
-      <h2><a href="/atom-digital-site/what-we-do/" class="link">What we do</a></h2>
-      <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
-    </header>
+    <a href="/atom-digital-site/what-we-do/" class="link">
+      <span class="image">
+        <img src="" alt="What we do" />
+      </span>
+      <header class="major">
+        <h2>What we do</a></h2>
+        <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
+      </header>
+  </a>
   </article>
   
   <article>
-    <span class="image">
-      <img src="" alt="Our Services" />
-    </span>
-    <header class="major">
-      <h2><a href="/atom-digital-site/services/" class="link">Our Services</a></h2>
-      <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
-    </header>
+    <a href="/atom-digital-site/services/" class="link">
+      <span class="image">
+        <img src="" alt="Our Services" />
+      </span>
+      <header class="major">
+        <h2>Our Services</a></h2>
+        <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
+      </header>
+  </a>
   </article>
   
   <article>
-    <span class="image">
-      <img src="" alt="Examples" />
-    </span>
-    <header class="major">
-      <h2><a href="/atom-digital-site/examples-of-digital-transformation/" class="link">Examples</a></h2>
-      <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
-    </header>
+    <a href="/atom-digital-site/examples-of-digital-transformation/" class="link">
+      <span class="image">
+        <img src="" alt="Examples" />
+      </span>
+      <header class="major">
+        <h2>Examples</a></h2>
+        <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
+      </header>
+  </a>
   </article>
   
   <article>
-    <span class="image">
-      <img src="" alt="About Us" />
-    </span>
-    <header class="major">
-      <h2><a href="/atom-digital-site/about/" class="link">About Us</a></h2>
-      <p>About Atom Digital<br>Business Software Consultancy</p>
-    </header>
+    <a href="/atom-digital-site/about/" class="link">
+      <span class="image">
+        <img src="" alt="About Us" />
+      </span>
+      <header class="major">
+        <h2>About Us</a></h2>
+        <p>About Atom Digital<br>Business Software Consultancy</p>
+      </header>
+  </a>
   </article>
   
 </section>
