--- a/elements/index.html
+++ b/elements/index.html
@@ -61,7 +61,7 @@
 			
 		
 			
-				<li><a href="/atom-digital-site/">Home</a></li>
+				<li><a href="/atom-digital-site/" class="link">Home</a></li>
 			
 		
 			
