--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <!--
     Hey! Thanks for checking out the source code for this site.
 
-    Are you interested in working with Atom Digital? 
+    Are you interested in working with ATOM Digital? 
     Why not contact us through the website or LinkedIn to start
     a conversation. We are always interested in talking to like minded
     tech people.
@@ -13,11 +13,10 @@
      - Attribution in footer
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
-    We always use the right tools to get the best, cost effective outcome.  
 -->
 <head>
 	<title>About Us | Atom Digital</title>
-	<meta name="description" content="About Atom Digital Business Software Consultancy">
+	<meta name="description" content="About ATOM Digital Business Software Consultancy">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -128,11 +127,11 @@
 
 <p>With over 20 years of experience, <nobr>Patrick O'Sullivan</nobr> (<a href="https://www.linkedin.com/in/patrickaosullivan/">LinkedIn</a>)  is a software expert.</p>
 
-<p>Patrick has worked with leading Australia brands like Toyota, Optus, Steafast and Dulux as well as a range of SMEs and not-for-profit organisations.</p>
+<p>Patrick has worked with leading Australia brands like Toyota, Optus, Steadfast and Dulux as well as a range of SMEs and not-for-profit organisations.</p>
 
 <p>Patrick is passionate about bringing cost effective software solutions to growing businesses.</p>
 
-<p>He works closely with each client to ensure Atom Digital has a meaningful and positive impact that builds a long term relationship.</p>
+<p>He works closely with each client to ensure ATOM Digital has a meaningful and positive impact that builds a long term relationship.</p>
 
 <div class="box alt">
 	<div class="row 90% uniform">
@@ -154,7 +153,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>Get in touch if you want to find out how software can help you to increase sales, reduce costs and improve productivity.</p>
+					<p>We offer a free, no obligation consultation to discuss your software needs. Please complete the form below and one of our team will get in touch.</p>
 				</div>
 				<form action="https://formspree.io/" method="POST">
 					<div class="field half first">
@@ -163,7 +162,11 @@
 					</div>
 					<div class="field half">
 						<label for="business_email">Business Email</label>
-						<input type="text" name="_replyto" id="business_email" />
+						<input type="text" name="business_email" id="business_email" />
+					</div>
+					<div class="field">
+						<label for="phone_number">Phone Number</label>
+						<input type="tel" name="phone_number" id="phone_number" />
 					</div>
 					<label>What are your current priorities?</label>
 					<input type="checkbox" id="priority1" name="priority1" value="Sales">
