--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html lang="en-AU">
+<!--
+    Hey! Thanks for checking out the source code for this site.
 
+    Are you interested in working with ATOM Digital? 
+    Why not contact us through the website or LinkedIn to start
+    a conversation. We are always interested in talking to like minded
+    tech people.
+
+    This site is a modified version of forty-jekyll-theme
+     - https://github.com/andrewbanchich/forty-jekyll-theme
+     - Attribution in footer
+    We use this as it is a very fast, lightweight and free way to build
+    a professional services website.
+-->
 <head>
 	<title>Home | Atom Digital</title>
 	<meta name="description" content="Atom">
@@ -18,6 +26,7 @@
 	<link rel="icon" type="image/x-icon" href="/atom-digital-site/assets/images/favicon.ico">
 
 </head>
+
 
 
 <body>
@@ -165,7 +174,7 @@
       </span>
       <header class="major">
         <h2>About Us</a></h2>
-        <p>About Atom Digital<br>Business Software Consultancy</p>
+        <p>About ATOM Digital<br>Business Software Consultancy</p>
       </header>
   </a>
   </article>
@@ -177,9 +186,9 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h3>Massa libero</h3>
+                    <h3>Are you ready?</h3>
                 </header>
-                <p><p>Are you a growing business with 5 to 50 employees? Is your turnover doubling in the next 3 years?</p>
+                <p><p>Are you a growing business with 5 to 50 employees? Is your turnover doubling in the next 3 years? Are you experiencing a strain on your resources as you grow?</p>
 
 <p>ATOM Digital can help you get ahead of the game by taking ownership of your digital landscape. We use software tools and services to help increase sales, reduce costs and improve productivity while you focus on growth.</p>
 </p>
@@ -199,7 +208,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>Get in touch if you want to find out how software can help you to increase sales, reduce costs and improve productivity.</p>
+					<p>We offer a free, no obligation consultation to discuss your software needs. Please complete the form below and one of our team will get in touch.</p>
 				</div>
 				<form action="https://formspree.io/" method="POST">
 					<div class="field half first">
@@ -208,7 +217,11 @@
 					</div>
 					<div class="field half">
 						<label for="business_email">Business Email</label>
-						<input type="text" name="_replyto" id="business_email" />
+						<input type="text" name="business_email" id="business_email" />
+					</div>
+					<div class="field">
+						<label for="phone_number">Phone Number</label>
+						<input type="tel" name="phone_number" id="phone_number" />
 					</div>
 					<label>What are your current priorities?</label>
 					<input type="checkbox" id="priority1" name="priority1" value="Sales">
