--- a/services/index.html
+++ b/services/index.html
@@ -3,7 +3,7 @@
 <!--
     Hey! Thanks for checking out the source code for this site.
 
-    Are you interested in working with Atom Digital? 
+    Are you interested in working with ATOM Digital? 
     Why not contact us through the website or LinkedIn to start
     a conversation. We are always interested in talking to like minded
     tech people.
@@ -13,7 +13,6 @@
      - Attribution in footer
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
-    We always use the right tools to get the best, cost effective outcome.  
 -->
 <head>
 	<title>Our Services | Atom Digital</title>
@@ -120,68 +119,88 @@
 				<header class="major">
 					<h1>Our Services</h1>
 				</header>
-				<p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
+				<p>ATOM Digital provides our clients access to specialists, technical resources.</p>
 <p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
-
 <p>Typically we help our clients to increase sales, reduce costs and improve productivity in the following ways.</p>
-<div class="spotlights">
-	<section>
-		<div class="content">
-            <div class="inner">
-                <header class="major">
-                    <h2>Business Process Automation</h2>
-                </header>     
-                <p>We help to:</p>
-                <ul>
-                    <li>convert paper processes to online ones</li>
-                    <li>automate labour intensive, manual processes</li>
-                    <li>reduce data entry errors</li>
-                </ul>
-            </div> 
-        </div>
-		<div class="content">
-            <div class="inner">
-                <header class="major">
-                    <h2>System Integration</h2>
-                </header>     
-                <p>We help to:</p>
-                <ul>
-                    <li>make multiple systems talk to each other</li>
-                    <li>create data integrity between systems</li>
-                    <li>push data to business inteligence and reporting tools</li>
-                </ul>
-            </div> 
-		</div>
-	</section>
-    <section>
-		<div class="content">
-            <div class="inner">
-                <header class="major">
-                    <h2>Workflow Automation</h2>
-                </header>     
-                <p>We help to:</p>
-                <ul>
-                    <li>automate multi-step, multiple system workflows</li>
-                    <li>automate communication to customers, suppliers and employees</li>
-                    <li>apply business rules to data and processes</li>
-                </ul>
-            </div> 
-        </div>
-		<div class="content">
-            <div class="inner">
-                <header class="major">
-                    <h2>Sales Automation</h2>
-                </header>     
-                <p>We help to:</p>
-                <ul>
-                    <li>ensure a best-in-class digital presence</li>
-                    <li>automate lead nurturing and sales follow ups</li>
-                    <li>create digital marketing and <nobr>re-marketing campaigns</nobr></li>
-                </ul>
-            </div> 
-		</div>
-	</section>
-    
+<div class="row">
+    <div class="6u 12u$(small)">
+        <div class="inner">
+            <header class="major">
+                <h2>Business Process Automation</h2>
+            </header>     
+            <p>We help to:</p>
+            <ul>
+                <li>convert paper processes to online ones</li>
+                <li>automate labour intensive, manual processes</li>
+                <li>reduce data entry errors</li>
+            </ul>
+        </div> 
+    </div>
+    <div class="6u$ 12u$(small)">
+        <div class="inner">
+            <header class="major">
+                <h2>System Integration</h2>
+            </header>     
+            <p>We help to:</p>
+            <ul>
+                <li>make multiple systems talk to each other</li>
+                <li>create data integrity between systems</li>
+                <li>push data to business intelligence and reporting tools</li>
+            </ul>
+        </div> 
+    </div>
+    <div class="6u 12u$(small)">
+        <div class="inner">
+            <header class="major">
+                <h2>Workflow Automation</h2>
+            </header>     
+            <p>We help to:</p>
+            <ul>
+                <li>automate multi-step, multiple system workflows</li>
+                <li>automate communication to customers, suppliers and employees</li>
+                <li>apply business rules to data and processes</li>
+            </ul>
+        </div> 
+    </div>
+    <div class="6u$ 12u$(small)">
+        <div class="inner">
+            <header class="major">
+                <h2>Sales Automation</h2>
+            </header>     
+            <p>We help to:</p>
+            <ul>
+                <li>ensure a best-in-class digital presence</li>
+                <li>automate lead nurturing and sales follow ups</li>
+                <li>create digital marketing and <nobr>remarketing campaigns</nobr></li>
+            </ul>
+        </div> 
+    </div>
+    <div class="6u 12u$(small)">
+        <div class="inner">
+            <header class="major">
+                <h2>Inbound Customer Contact</h2>
+            </header>     
+            <p>We help to:</p>
+            <ul>
+                <li>route calls to the right person at the right time</li>
+                <li>create self-service virtual assistants for callers</li>
+                <li>reduce unanswered and missed calls</li>
+            </ul>
+        </div> 
+    </div>
+    <div class="6u$ 12u$(small)">
+        <div class="inner">
+            <header class="major">
+                <h2>Process Outsourcing</h2>
+            </header>     
+            <p>We help to:</p>
+            <ul>
+                <li>identify processes that can be outsourced</li>
+                <li>select the right outsourced partners</li>
+                <li>document processes and train partners</li>
+            </ul>
+        </div> 
+    </div>
 </div>
  
 			</div>
@@ -195,7 +214,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>Get in touch if you want to find out how software can help you to increase sales, reduce costs and improve productivity.</p>
+					<p>We offer a free, no obligation consultation to discuss your software needs. Please complete the form below and one of our team will get in touch.</p>
 				</div>
 				<form action="https://formspree.io/" method="POST">
 					<div class="field half first">
@@ -204,7 +223,11 @@
 					</div>
 					<div class="field half">
 						<label for="business_email">Business Email</label>
-						<input type="text" name="_replyto" id="business_email" />
+						<input type="text" name="business_email" id="business_email" />
+					</div>
+					<div class="field">
+						<label for="phone_number">Phone Number</label>
+						<input type="tel" name="phone_number" id="phone_number" />
 					</div>
 					<label>What are your current priorities?</label>
 					<input type="checkbox" id="priority1" name="priority1" value="Sales">
