--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -3,7 +3,7 @@
 <!--
     Hey! Thanks for checking out the source code for this site.
 
-    Are you interested in working with Atom Digital? 
+    Are you interested in working with ATOM Digital? 
     Why not contact us through the website or LinkedIn to start
     a conversation. We are always interested in talking to like minded
     tech people.
@@ -13,7 +13,6 @@
      - Attribution in footer
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
-    We always use the right tools to get the best, cost effective outcome.  
 -->
 <head>
 	<title>What we do | Atom Digital</title>
@@ -129,9 +128,9 @@ We act as an extension of our client’s team and provide the skills and experti
 
 <h2 id="our-role-and-focus">Our Role and focus</h2>
 <ul>
-  <li>Provide strategic leadership and analysis to identify the the biggest opportunities for our clients.</li>
+  <li>Provide strategic leadership and analysis to identify the biggest opportunities for our clients.</li>
   <li>Identify suitable digital tools and services, including defining the scope and carrying out vendor selection.</li>
-  <li>Oversea the change management process, including documentation, people management, communication, process change and risk mitigation.</li>
+  <li>Oversee the change management process, including documentation, people management, communication, process change and risk mitigation.</li>
   <li>Provide coaching and training for management and key employees.</li>
   <li>Provide monitoring, maintenance and support for digital tools and services.</li>
 </ul>
@@ -147,7 +146,7 @@ We act as an extension of our client’s team and provide the skills and experti
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>Get in touch if you want to find out how software can help you to increase sales, reduce costs and improve productivity.</p>
+					<p>We offer a free, no obligation consultation to discuss your software needs. Please complete the form below and one of our team will get in touch.</p>
 				</div>
 				<form action="https://formspree.io/" method="POST">
 					<div class="field half first">
@@ -156,7 +155,11 @@ We act as an extension of our client’s team and provide the skills and experti
 					</div>
 					<div class="field half">
 						<label for="business_email">Business Email</label>
-						<input type="text" name="_replyto" id="business_email" />
+						<input type="text" name="business_email" id="business_email" />
+					</div>
+					<div class="field">
+						<label for="phone_number">Phone Number</label>
+						<input type="tel" name="phone_number" id="phone_number" />
 					</div>
 					<label>What are your current priorities?</label>
 					<input type="checkbox" id="priority1" name="priority1" value="Sales">
