--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -3,7 +3,7 @@
 <!--
     Hey! Thanks for checking out the source code for this site.
 
-    Are you interested in working with Atom Digital? 
+    Are you interested in working with ATOM Digital? 
     Why not contact us through the website or LinkedIn to start
     a conversation. We are always interested in talking to like minded
     tech people.
@@ -13,11 +13,10 @@
      - Attribution in footer
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
-    We always use the right tools to get the best, cost effective outcome.  
 -->
 <head>
 	<title>Examples | Atom Digital</title>
-	<meta name="description" content="About Atom Digital - Business Software Consultants">
+	<meta name="description" content="About ATOM Digital - Business Software Consultants">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/atom-digital-site/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -118,8 +117,16 @@
 				<header class="major">
 					<h1>Examples</h1>
 				</header>
-				<h2 id="todo">TODO</h2>
-<p>Adding a list of examples</p>
+				<p>Here is a list of different ways that ATOM Digital help our clients.</p>
+
+<h2 id="increase-sales">Increase Sales</h2>
+<ul>
+  <li>Ensure website is error free and meets current best practices</li>
+  <li>Create a welcome series of emails to engage new prospects</li>
+  <li>Create a centralised customer database with 360-degree view of activity</li>
+  <li>Introduce sales pipeline software that gives full visibility of all prospects and automates follow ups</li>
+  <li>Automate quote generation and approval process to free up time for sales team</li>
+</ul>
  
 			</div>
 		</section>
@@ -132,7 +139,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>Get in touch if you want to find out how software can help you to increase sales, reduce costs and improve productivity.</p>
+					<p>We offer a free, no obligation consultation to discuss your software needs. Please complete the form below and one of our team will get in touch.</p>
 				</div>
 				<form action="https://formspree.io/" method="POST">
 					<div class="field half first">
@@ -141,7 +148,11 @@
 					</div>
 					<div class="field half">
 						<label for="business_email">Business Email</label>
-						<input type="text" name="_replyto" id="business_email" />
+						<input type="text" name="business_email" id="business_email" />
+					</div>
+					<div class="field">
+						<label for="phone_number">Phone Number</label>
+						<input type="tel" name="phone_number" id="phone_number" />
 					</div>
 					<label>What are your current priorities?</label>
 					<input type="checkbox" id="priority1" name="priority1" value="Sales">
