--- a/404.html
+++ b/404.html
@@ -49,9 +49,11 @@
 			
 		
 			
+				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+		
 			
 		
 			
@@ -82,6 +84,10 @@
 		
 			
 				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+			
+		
+			
+				<li><a href="/atom-digital-site/examples-of-digital-transformation-2/">Examples</a></li>
 			
 		
 			
@@ -154,7 +160,6 @@
 					</div>
 					<ul class="actions">
 						<li><input type="submit" value="Send Message" class="special" /></li>
-						<li><input type="reset" value="Clear" /></li>
 					</ul>
 				</form>
 			</section>
