--- a/elements/index.html
+++ b/elements/index.html
@@ -58,9 +58,11 @@
 			
 		
 			
+				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+		
 			
 		
 			
@@ -91,6 +93,10 @@
 		
 			
 				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+			
+		
+			
+				<li><a href="/atom-digital-site/examples-of-digital-transformation-2/">Examples</a></li>
 			
 		
 			
@@ -551,7 +557,6 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					</div>
 					<ul class="actions">
 						<li><input type="submit" value="Send Message" class="special" /></li>
-						<li><input type="reset" value="Clear" /></li>
 					</ul>
 				</form>
 			</section>
