--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 			
 		
 			
+				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+		
 			
 		
 			
@@ -91,6 +93,10 @@
 		
 			
 				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+			
+		
+			
+				<li><a href="/atom-digital-site/examples-of-digital-transformation-2/">Examples</a></li>
 			
 		
 			
@@ -151,6 +157,18 @@
       <header class="major">
         <h2>Our Services</a></h2>
         <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
+      </header>
+  </a>
+  </article>
+  
+  <article>
+    <a href="/atom-digital-site/examples-of-digital-transformation-2/" class="link">
+      <span class="image">
+        <img src="" alt="Examples" />
+      </span>
+      <header class="major">
+        <h2>Examples</a></h2>
+        <p>There are many ways that ATOM Digital can help.<br> Here are just some of them</p>
       </header>
   </a>
   </article>
@@ -236,7 +254,6 @@
 					</div>
 					<ul class="actions">
 						<li><input type="submit" value="Send Message" class="special" /></li>
-						<li><input type="reset" value="Clear" /></li>
 					</ul>
 				</form>
 			</section>
