--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -58,9 +58,11 @@
 			
 		
 			
+				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+			
 		
 			
-				<li><a href="/atom-digital-site/" class="link">Home</a></li>
+		
 			
 		
 			
@@ -93,6 +95,10 @@
 		
 			
 				<li><a href="/atom-digital-site/services/">Our Services</a></li>
+			
+		
+			
+				<li><a href="/atom-digital-site/examples-of-digital-transformation-2/">Examples</a></li>
 			
 		
 			
@@ -174,7 +180,6 @@ We act as an extension of our client’s team and provide the skills and experti
 					</div>
 					<ul class="actions">
 						<li><input type="submit" value="Send Message" class="special" /></li>
-						<li><input type="reset" value="Clear" /></li>
 					</ul>
 				</form>
 			</section>
