--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
 
 <p>Together, we build better businesses.</p>
 
-<h2 id="principle-consultant---patrick-osullivan">Principle Consultant - Patrick O’Sullivan</h2>
+<h2 id="principle-consultant---patrick-osullivan">Principle Consultant - <nobr>Patrick O'Sullivan</nobr></h2>
 
 <p>With over 20 years of experience, <nobr>Patrick O'Sullivan</nobr> (<a href="https://www.linkedin.com/in/patrickaosullivan/">LinkedIn</a>)  is a software expert.</p>
 
