--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -279,7 +279,7 @@
             Useful Links: 
                 
             <a href="https://www.silentpartner.com.au/" target="_blank">Silent Partner</a>,
-            <a href="https://www.virtualreception.com.au/" target="_blank">Virtual Receptionis</a>.
+            <a href="https://www.virtualreception.com.au/" target="_blank">Virtual Receptionist</a>.
             
         </p>
 
